- fixed an issue with too long stats at the market window (#814)

--- a/src/app/modules/market/component/market-item-search-result/market-item-search-result.component.scss
+++ b/src/app/modules/market/component/market-item-search-result/market-item-search-result.component.scss
@@ -12,7 +12,7 @@
 
         .inner,
         .outer {
-          white-space: inherit !important;
+          white-space: initial !important;
           min-width: auto !important;
         }
       }
